auto-test/tests/chapter_18/invalid_types/invalid_incomplete_structs/incomplete_arg_funcall.c
struct s;

void f(struct s param);

extern struct s extern_var;

int main(void) {
  
  f(extern_var);
}